# crypto

./: .gitignore  CONTRACT.md  Cargo.toml  PROVIDER_POLICY.md  Package.resolved  Package.swift  README.md  RELEASE_BLOCKERS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_MEMORY_MODEL.md  buf.gen.yaml  buf.yaml  deny.toml  maven-central-bundle.local.sh  provider_manifest.json
crates/aes-kw/: Cargo.toml
crates/aes-kw/src/: constants.rs  lib.rs  types.rs  unwrap_key.rs  wrap_key.rs
crates/aes-kw/tests/: aes_kw_tests.rs
crates/aes256-gcm/: Cargo.toml
crates/aes256-gcm-siv/: Cargo.toml
crates/aes256-gcm-siv/src/: constants.rs  lib.rs  types.rs
crates/aes256-gcm-siv/tests/: aes256_gcm_siv_tests.rs
crates/aes256-gcm/src/: lib.rs
crates/aes256-gcm/tests/: aes256_gcm_tests.rs  wasm_backend_tests.rs
crates/argon2id/: Cargo.toml
crates/argon2id/src/: constants.rs  derive.rs  lib.rs  material.rs  profile.rs
crates/argon2id/tests/: argon2id_tests.rs  feature_lane_tests.rs
crates/codec/: Cargo.toml  NOTICE  README.md
crates/codec/base64/: Cargo.toml
crates/codec/base64url/: Cargo.toml
crates/codec/cbor/: Cargo.toml
crates/codec/hex/: Cargo.toml  README.md
crates/codec/jcs/: Cargo.toml
crates/codec/multibase/: Cargo.toml
crates/codec/multicodec/: Cargo.toml
crates/codec/multikey/: Cargo.toml
crates/codec/pem/: Cargo.toml  README.md
crates/codec/src/: lib.rs
crates/constant-time/: Cargo.toml
crates/constant-time/src/: lib.rs
crates/constant-time/tests/: constant_time_tests.rs  feature_lane_tests.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/core/: Cargo.toml
crates/crypto/dispatch/: Cargo.toml  README.md
crates/crypto/ffi/: Cargo.toml  README.md
crates/crypto/signer/: Cargo.toml
crates/crypto/src/: aead_error.rs  aes.rs  aes256_gcm.rs  aes_gcm_siv.rs  aes_kw.rs  argon2id.rs  chacha20_poly1305.rs  concat_kdf.rs  dispatch.rs  ed25519.rs  hkdf.rs  hmac.rs  hpke.rs  kem_error.rs  key_agreement_error.rs  kmac.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_768.rs  p256.rs  p384.rs  p521.rs  pbkdf2.rs  rsa.rs  secp256k1.rs  sha2.rs  sha3.rs  signature_error.rs  slh_dsa.rs  x25519.rs  x_wing.rs
crates/crypto/tests/: aead_feature_lane_tests.rs  aead_operation_response_tests.rs  aead_operation_tests.rs  aead_root_open_operation_tests.rs  aes256_gcm_nonce_contract_tests.rs  backend_lane_coverage_tests.rs  bip340_operation_response_tests.rs  bip340_parity_tests.rs  dispatch_facade_export_tests.rs  hash_constant_time_operation_tests.rs  hash_feature_lane_tests.rs  hash_operation_response_tests.rs  hpke_operation_contract_tests.rs  hpke_operation_tests.rs  hpke_vector_surface_tests.rs  kdf_operation_response_tests.rs  kdf_operation_tests.rs  kem_operation_response_tests.rs  key_agreement_operation_response_tests.rs  key_agreement_operation_tests.rs  key_wrap_operation_tests.rs  mac_feature_lane_tests.rs  mac_operation_response_tests.rs  mac_operation_tests.rs  operation_contract_minimal_feature_tests.rs  operation_contract_tests.rs  operation_domain_tests.rs  operation_response_tests.rs  platform_key_operation_tests.rs  pq_signature_operation_response_tests.rs  pq_signature_operation_tests.rs  provider_manifest_tests.rs  public_vocabulary_tests.rs  rsa_operation_response_tests.rs  signature_operation_response_tests.rs  signature_operation_tests.rs  signature_parity_tests.rs  v030_surface_tests.rs
crates/crypto/wasm-package/: Cargo.toml
crates/csprng/: Cargo.toml
crates/csprng/src/: constants.rs  generate.rs  lib.rs  rng.rs  types.rs
crates/csprng/tests/: csprng_tests.rs  feature_lane_tests.rs
crates/ed25519/: Cargo.toml
crates/ed25519/src/: lib.rs
crates/ed25519/tests/: ed25519_tests.rs  wasm_backend_tests.rs
crates/ffi/: Cargo.toml  README.md
crates/ffi/abi/: reallyme_crypto_ffi.h
crates/ffi/src/: aes256_gcm_siv.rs  aes_kw.rs  argon2id.rs  bip340_schnorr.rs  chacha20_poly1305.rs  constant_time.rs  csprng.rs  ed25519.rs  guard.rs  hkdf.rs  hmac.rs  hpke.rs  kem_status.rs  key_agreement_status.rs  kmac.rs  kotlin_aead.rs  kotlin_argon2id.rs  kotlin_kmac.rs  kotlin_proto.rs  kotlin_result.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ml_kem_1024.rs  ml_kem_512.rs  ml_kem_768.rs  operation_response.rs  p256.rs  p384.rs  p521.rs  pbkdf2.rs  pointer.rs  rsa.rs  secp256k1.rs  sha2.rs  sha2_256.rs  sha3.rs  sha3_256.rs  signature_status.rs  (+4 more)
crates/ffi/tests/: aead_operation_parity_tests.rs  ffi_boundary_tests.rs  ffi_tests.rs  hash_constant_time_parity_tests.rs  key_wrap_operation_parity_tests.rs  kotlin_result_tests.rs  mac_operation_parity_tests.rs  operation_response_ffi_tests.rs  pointer_tests.rs
crates/hkdf/: Cargo.toml
crates/hkdf/src/: derive.rs  lib.rs  material.rs  policy.rs  sha384.rs
crates/hkdf/tests/: feature_lane_tests.rs  hkdf_tests.rs  sha384_tests.rs
crates/hmac/: Cargo.toml  README.md
crates/hmac/src/: lib.rs  types.rs
crates/hmac/tests/: hmac_tests.rs
crates/hpke/: Cargo.toml  README.md
crates/hpke/src/: constants.rs  dhkem.rs  dispatch.rs  error.rs  export.rs  identifiers.rs  keypair.rs  lib.rs  mlkem1024p384.rs  mlkem512.rs  random.rs  seal.rs  secp256k1.rs  setup_receiver.rs  setup_sender.rs  types.rs  validation.rs  x448.rs
crates/jwk/: Cargo.toml  README.md
crates/jwk-multikey/: Cargo.toml  README.md
crates/kmac/: Cargo.toml
crates/ml-dsa-65/: Cargo.toml
crates/ml-dsa-87/: Cargo.toml
crates/ml-kem-512/: Cargo.toml
crates/p256/: Cargo.toml
crates/p521/: Cargo.toml  README.md
crates/rsa/: Cargo.toml  README.md
crates/secp256k1/: Cargo.toml
crates/sha2-256/: Cargo.toml
crates/sha3/: Cargo.toml
crates/sha3-256/: Cargo.toml
crates/slh-dsa/: Cargo.toml  README.md
crates/wasm/: Cargo.toml  NOTICE
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: base64url.rs  dag_cbor.rs  jwk_multikey.rs  key_encodings.rs  multibase.rs  multicodec.rs  multikey.rs  operation_family_boundaries.rs  operation_response.rs  p256_point.rs  post_quantum_encodings.rs  proto_process.rs  rsa_der.rs
(+999 files in other folders)
