# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
default-members = ["crates/crypto"]
members = [
    "crates/crypto",
    "crates/crypto/core",
    "crates/crypto/dispatch",
    "crates/ffi",
    "crates/crypto/signer",
    "crates/wasm",
    "crates/aes-kw",
    "crates/aes256-gcm",
    "crates/aes256-gcm-siv",
    "crates/argon2id",
    "crates/chacha20-poly1305",
    "crates/concat-kdf",
    "crates/constant-time",
    "crates/csprng",
    "crates/ed25519",
    "crates/hmac",
    "crates/hkdf",
    "crates/kmac",
    "crates/ml-dsa-44",
    "crates/ml-dsa-65",
    "crates/ml-dsa-87",
    "crates/ml-kem-512",
    "crates/ml-kem-1024",
    "crates/ml-kem-768",
    "crates/p256",
    "crates/p384",
    "crates/p521",
    "crates/pbkdf2",
    "crates/rsa",
    "crates/secp256k1",
    "crates/sha2",
    "crates/sha2-256",
    "crates/sha3",
    "crates/sha3-256",
    "crates/slh-dsa",
    "crates/x25519",
    "crates/x448",
    "crates/x-wing",
    "crates/hpke",
    "crates/jwk",
    "crates/jwk-multikey",
    "crates/conformance",
    "crates/proto",
    "tools/external-vector-audit",
]
exclude = ["core", "fuzz"]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/reallyme/crypto"
publish = false

# Centralized external (crates.io) dependency versions.
#
# Every member crate inherits these via `dep = { workspace = true }` so that a
# single audited version requirement governs the whole workspace. Crate-specific
# `features`, `default-features`, and `optional` are declared at the use site.
#
# Deliberately NOT centralized (genuinely divergent versions across crates):
#   - getrandom (0.2 for the RustCrypto stack, 0.4 for the digest wasm lanes)
# The `*-conformance` package aliases are intentionally left inline to preserve
# their `package = "..."` renames.
[workspace.dependencies]
# Error handling
thiserror = "2.0"
# Memory hygiene / secrets
zeroize = "1.9"
secrecy = "0.10.3"
subtle = "2.6"
# Randomness
rand = "0.10"
rand_chacha = "0.10"
getrandom = "0.4"
# Hashing / KDF
sha2 = { version = "0.11", features = ["zeroize"] }
sha3 = { version = "0.12", features = ["zeroize"] }
sha3-kmac = { version = "0.3.0", default-features = false }
shake = { version = "0.1", default-features = false, features = ["zeroize"] }
sha1 = "0.11"
hkdf = "0.13"
hmac = { version = "0.13", features = ["zeroize"] }
pbkdf2 = "0.13"
argon2 = { version = "0.5", default-features = false }
hpke = { version = "0.14.0", default-features = false }
# AEAD
aes = "0.9"
aes-gcm = { version = "0.11", features = ["zeroize"] }
aes-gcm-siv = "0.11"
aes-kw = { version = "0.3.1", default-features = false }
chacha20poly1305 = "0.11"
# Signatures / key agreement
ed25519-dalek = "3"
x25519-dalek = "3"
x448 = { version = "=0.14.0-pre.12", default-features = false }
p256 = { version = "0.14", default-features = false }
p384 = "0.14"
p521 = "0.14"
k256 = "0.14"
ecdsa = "0.17"
crypto-bigint = { version = "0.7", features = ["alloc"] }
const-oid = { version = "0.10", features = ["db"] }
spki = "0.8.0"
# Post-quantum
ml-dsa = { version = "0.1.1", default-features = false }
ml-kem = "0.3.2"
slh-dsa = "0.2.0-rc.5"
# Encoding / serialization
buffa = "0.9.0"
base64 = "0.22"
serde = "1.0"
serde_json = "1.0"
ryu-js = "1"
bs58 = "0.5"
cid = "0.11.3"
multihash = "0.19.5"
multihash-codetable = "0.2.2"
# WASM bridge
wasm-bindgen = "0.2"
js-sys = "0.3"
# Dev / test
hex = "0.4"
hex-literal = "1.1"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

# Native libraries cross C and JNI boundaries whose panic firewall requires
# unwinding. Release packaging must select this profile explicitly; keeping the
# policy in Cargo avoids relying on RUSTFLAGS/codegen-option precedence.
[profile.release-ffi]
inherits = "release"
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
wildcard_imports = "deny"
large_include_file = "deny"
