# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-crypto-constant-time"
version = "0.3.1"
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]
edition.workspace = true
rust-version.workspace = true
publish = true
description = "Constant-time comparison helpers for ReallyMe Crypto."
license.workspace = true
repository.workspace = true

[lib]
name = "crypto_constant_time"

[features]
default = []
native = []
wasm = []

[dependencies]
crypto-core = { package = "reallyme-crypto-core", version = "0.3.1", path = "../crypto/core" }
subtle = { workspace = true }

[lints]
workspace = true
